force-app/main/default/objects/hed__Test__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The student who took the test.</description>
    <inlineHelpText>L&apos;étudiant qui a passé le test.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Tests</relationshipLabel>
    <relationshipName>Tests</relationshipName>
    <type>Lookup</type>
</CustomField>