force-app/main/default/objects/hed__Test__c/fields/hed__Date_Received__c.field-meta.xml
<CustomField>
    <fullName>hed__Date_Received__c</fullName>
    <description>The date the test score is added to the system, either by manual upload or directly from an official source.</description>
    <inlineHelpText>La date à laquelle le score au test est ajouté au système, que ce soit par chargement manuel ou directement depuis une source officielle.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>