force-app/main/default/objects/hed__Test__c/fields/hed__Test_Date__c.field-meta.xml
<CustomField>
    <fullName>hed__Test_Date__c</fullName>
    <description>The date the applicant or official source indicates the test was started.</description>
    <inlineHelpText>La date à laquelle le demandeur ou la source officielle a indiqué que le test avait commencé.</inlineHelpText>
    <label>Test Date</label>
    <type>Date</type>
</CustomField>