force-app/main/default/objects/hed__Test__c/fields/hed__Test_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Test_Type__c</fullName>
    <description>The formal name for the test taken.</description>
    <inlineHelpText>Le nom formel du test effectué.</inlineHelpText>
    <label>Test Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SAT</fullName>
            </value>
            <value>
                <fullName>Test de positionnement</fullName>
            </value>
            <value>
                <fullName>Test de management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>