force-app/main/default/objects/hed__Test__c/fields/hed__Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>hed__Verification_Status__c</fullName>
    <description>Indicates the verification status of a credential.</description>
    <inlineHelpText>Indicates the verification status of a credential.</inlineHelpText>
    <label>Verification Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Unverified</fullName>
            </value>
            <value>
                <fullName>Revoked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>