force-app/main/default/objects/hed__Test__c/fields/SIS_Pays_de_passation__c.field-meta.xml
<CustomField>
    <fullName>SIS_Pays_de_passation__c</fullName>
    <label>Pays de passation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>France</fullName>
            </value>
            <value>
                <fullName>Hors France</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>