force-app/main/default/objects/hed__Test__c/fields/SIS_Test_de_management__c.field-meta.xml
<CustomField>
    <fullName>SIS_Test_de_management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test de management</label>
    <type>Checkbox</type>
</CustomField>